--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<title>INF272 QUIZ</title>
 <body>
     <div>
         <h2>Siphesihle Twala</h2>
     </div>
-    <div>
-       
-    </div>
-
+    <section>
+       <p>I am 21 years old. I live in Johannesburg South. I enjoy playing and watch soccer, as i aspire to beocome<br />
+          a proffessional soccer in future. I am passion in the degree im studying as it is very intrigging. I am <br />
+          introvert but I am not social anxious and I live by the principle of reprocity</p>
+    </section>
 
 </body>
 </html>
