--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <h2>Siphesihle Twala</h2>
     </div>
     <section>
+        <h2>About Me</h2>
        <p>I am 21 years old. I live in Johannesburg South. I enjoy playing and watch soccer, as i aspire to beocome<br />
           a proffessional soccer in future. I am passion in the degree im studying as it is very intrigging. I am <br />
           introvert but I am not social anxious and I live by the principle of reprocity</p>
