--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="StyleSheet1.css">
+</head>
 <body>
+    <div class="Header">
+        <h1>Siphesihle Twala</h1>
+    </div>
     <div>
-        <h2>Siphesihle Twala</h2>
+        <img src="cartoon-boy-learning-on-computer-school-student-vector-30255664.jpg"  alt=“Description of image” width="600" hieght="300">
     </div>
     <section>
         <h2>About Me</h2>
-       <p>I am 21 years old. I live in Johannesburg South. I enjoy playing and watch soccer, as i aspire to beocome<br />
-          a proffessional soccer in future. I am passion in the degree im studying as it is very intrigging. I am <br />
-          introvert but I am not social anxious and I live by the principle of reprocity</p>
+        <div class="paragraph">
+            <p>
+                I am 21 years old. I live in Johannesburg South. I enjoy playing and watch soccer, as i aspire to beocome<br />
+                a proffessional soccer in future. I am passion in the degree im studying as it is very intrigging. I am <br />
+                introvert but I am not social anxious and I live by the principle of reprocity
+            </p>
+        </div>
+       
     </section>
 
 </body>
